# hpc_course_4_p1

./: .travis.yml  CMakeLists.txt  README.md  Zakiev_HPC_test_pi.cpp  Zakiev_mpi.cpp  Zakiev_openmp.cpp  helloopenmp.cpp  math.cpp  mpi.cpp  openmp.cpp  pi.cpp  piOMP.cpp  piopenmp.cpp
